# ministat

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  README.md
cmake/Modules/: CompileWithWarnings.cmake
src/: Makefile.am  getopt.c  getopt.h  ministat.c
